# BiliRoamingH-Server

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md
crates-tauri/: package-lock.json  package.json
crates-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates-tauri/src/components/: Greet.vue
crates/core/: main.rs
crates/libs/lib-core/: Cargo.toml  build.rs
crates/libs/lib-core/src/: business.rs  lib.rs  server.rs
crates/libs/lib-core/src/business/: account.rs  fingerprint.rs
crates/libs/lib-core/src/business/account/: auth.rs  myinfo.rs  utils.rs
crates/libs/lib-core/src/business/fingerprint/: buvid.rs
crates/libs/lib-core/src/server/: config.rs  ctx.rs
crates/libs/lib-rpc/: Cargo.toml
crates/libs/lib-rpc-client/: Cargo.toml
crates/libs/lib-rpc-client/src/: error.rs  lib.rs  rest.rs  utils.rs
crates/libs/lib-rpc-client/src/client/: grpc.rs  rest.rs
crates/libs/lib-rpc-client/src/client/grpc/: client_http02.rs  connect_http02.rs  proxy.rs  tls.rs
crates/libs/lib-rpc-client/src/grpc/: client_http02.rs  connect_http02.rs  proxy.rs  tls.rs
crates/libs/lib-rpc/src/: error.rs  lib.rs  model.rs  request.rs  utils.rs
crates/libs/lib-rpc/src/model/: playurl.rs  response.rs
crates/libs/lib-rpc/src/request/: interface.rs  mod.rs  playurl.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: avbvc.rs  error.rs  headers.rs  lib.rs  macros.rs  misc.rs  roaming_utils.rs  sign.rs  url.rs  web.rs
crates/libs/lib-utils/src/model/: response.rs
crates/libs/lib-utils/src/web/: fingerprint2.rs  mod.rs  uuid.rs
crates/services/: Cargo.toml
crates/services/src/: bili_ticket.rs  handler.rs  intercept.rs  lib.rs  model.rs  playurl.rs
crates/services/src/handler/: playurl.rs  test.rs  test_intercept.rs
crates/services/src/model/: playurl_compat.rs
crates/tools/.ring/: pubkey.pem
