[package]
name = "biliroamingh_rust_server"
version = "0.1.0"
authors = ["Hantong Chen <hantong@utop.win>"]
edition = "2021"
rust-version = "1.75"

[workspace]
resolver = "2"
members = [
    # -- Application libs
    "crates/libs/lib-core",
    "crates/libs/lib-rpc",
    "crates/libs/lib-utils",
    "crates/libs/lib-rpc-client",

    # -- Services
    "crates/services",

    # -- Tools
]
exclude = [
    "crates/libs/lib-bilibili",
]

[[bin]]
bench = false
path = "crates/core/main.rs"
name = "biliroamingh_rust_server"

[dependencies]
axum = { version = "0.7", features = ["http2"]}
services ={ path = "crates/services"}
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[patch.crates-io]
reqwest = { git = 'https://github.com/cxw620/lib_reqwest.git', rev = 'ed9dbc7649f53cd18b5bdfe88173064c95bd6b78' }
# tonic = { path = 'D:\LocalDevelop\LocalRepo\Dependence\tonic\tonic' }
