[package]
name = "biliroamingh_rust_server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
bench = false
path = "crates/core/main.rs"
name = "biliroamingh_rust_server"

[dependencies]
# Dev deps
dotenvy = "0.15"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Business deps
axum = { workspace = true, features = ["default", "http2", "json"] }
tokio = { workspace = true }
lib_core = { workspace = true }
services = { path = "crates/services" }

# open-telemetry
axum-tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true, features = ["rt-tokio"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
# opentelemetry-stdout = { workspace = true }
tracing-opentelemetry = { workspace = true }

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "unwind"
incremental = true
split-debuginfo = "off"
codegen-units = 1
rpath = false

[workspace]
resolver = "2"
members = [
    # -- Application libs
    "crates/libs/lib-core",
    "crates/libs/lib-rpc",
    "crates/libs/lib-utils",
    "crates/libs/lib-rpc-client",

    # -- Services
    "crates/services",

    # -- Tools

    # -- tauri client
    "crates-tauri/src-tauri",
]
exclude = ["crates/libs/lib-bilibili"]

[workspace.package]
version = "0.1.0"
authors = ["Hantong Chen <hantong@utop.win>"]
edition = "2021"
rust-version = "1.76"

[workspace.dependencies]
# Dev deps
anyhow = "1.0"
bytes = "1.5"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["parking_lot"] }

# Basic deps
base64 = "0.21"
http = "1.0"
http-02 = { package = "http", version = "0.2" }                             # compatibility
http-body = "1.0"
http-body-util = "0.1"
http-body-04 = { package = "http-body", version = "0.4.6" }                 # compatibility
hyper = { version = "1.1", features = ["full"] }
hyper-014 = { package = "hyper", version = "0.14.28", features = ["full"] }
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full", "tracing"] }
tower = "0.4"
tower-service = "0.3"
url = "2.5"

# Business deps
axum = { version = "0.7", default-features = false }
reqwest = { version = "0.11", default-features = false }
tonic = { version = "0.11", default-features = false }

# open-telemetry
axum-tracing-opentelemetry = "0.17.0"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20.0"
opentelemetry_sdk = "0.21"
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
tracing-opentelemetry = "0.22.0"

# Local libs
lib_core = { path = "crates/libs/lib-core" }
lib_bilibili = { path = "crates/libs/lib-bilibili" }
lib_rpc_client = { path = "crates/libs/lib-rpc-client" }
lib_rpc = { path = "crates/libs/lib-rpc" }
lib_utils = { path = "crates/libs/lib-utils" }

[workspace.dev-dependencies]
axum = { workspace = true, features = ["default", "http2", "json"] }
tonic = { workspace = true, features = ["default", "gzip"] }

# Local libs
lib_core = { workspace = true }
lib_bilibili = { workspace = true }
lib_rpc_client = { workspace = true }
lib_rpc = { workspace = true }
lib_utils = { workspace = true }

[patch.crates-io]
reqwest = { git = 'https://github.com/cxw620/lib_reqwest.git', rev = 'ed9dbc7649f53cd18b5bdfe88173064c95bd6b78' }
# tonic = { path = 'D:\LocalDevelop\LocalRepo\Dependence\tonic\tonic' }
