[package]
name = "services"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = "1.0"
axum = "0.7"
bytes = "1.5"
http = "1.0"
lib_bilibili ={ path = "../libs/lib-bilibili" }
lib_utils = { path = "../libs/lib-utils" }
prost = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = { version = "0.10.2", features = ["gzip"]}
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing-subscriber = "0.3"
