[package]
name = "services"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace deps
## Dev deps
anyhow = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

## Basic deps
http = { workspace = true }
http-02 = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

## Business deps
axum = { workspace = true }
tonic = { workspace = true, features = ["default", "gzip"] }

## Local libs
lib_bilibili = { workspace = true }
lib_rpc = { workspace = true, features = ["request"]}
lib_utils = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
