[package]
name = "lib_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Dev deps
anyhow = { workspace = true }
tracing = { workspace = true }

# Basic deps
serde = { workspace = true }

# Local lib
lib_utils = { workspace = true }
