[package]
name = "lib_rpc_client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Basic deps
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
bytes = "1.5"
dashmap = "5.5"
log = "0.4"
pin-project-lite = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tracing = "0.1"

# Core deps
http = "1.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.1", features = ["full"] }
hyper-tls = { version = "0.6.0", features = ["alpn"] }
hyper-util = { version = "0.1.2", features = [
    "client-legacy",
    "http1",
    "http2",
] }
percent-encoding = "2"
tokio = { version = "1.35", features = ["full"] }
url = "2.5"

## Hyper 0.14 compatibility for tonic & reqwest
http-02 = { package = "http", version = "0.2.11" }
http-body-04 = { package = "http-body", version = "0.4.6" }
hyper-014 = { package = "hyper", version = "0.14.28", features = ["full"] }

## reqwest
reqwest = { version = "0.11", features = [
    "blocking",
    "socks",
    "brotli",
    "gzip",
    "deflate",
    "rustls-tls",
    # "native-tls-alpn",
    "json",
    "cookies",
] }

## tonic
tonic = { version = "0.10", default-features = false, features = ["gzip"] }
tower = "0.4"
tower-service = "0.3"

# Owned deps
lib_bilibili = { path = "../lib-bilibili" }
lib_utils = { path = "../lib-utils" }

# Optional deps...

rustls-pemfile = { version = "1.0", optional = true }

## rustls-tls, all use old version for compatibility with hyper 0.14
hyper-rustls = { version = "0.24.0", default-features = false, features = ["http2"], optional = true }
rustls = { version = "0.21.6", features = ["dangerous_configuration"], optional = true }
tokio-rustls = { version = "0.24", optional = true }
webpki-roots = { version = "0.25", optional = true }
rustls-native-certs = { version = "0.6", optional = true }

## socks
tokio-socks = { version = "0.5.1", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
tonic = { version = "0.10", default-features = true, features = ["gzip"] }

[features]
default = ["rustls-tls", "proxy"]

rustls-tls = ["rustls-tls-webpki-roots"]
rustls-tls-manual-roots = ["__rustls"]
rustls-tls-webpki-roots = ["webpki-roots", "__rustls"]
rustls-tls-native-roots = ["rustls-native-certs", "__rustls"]

# Use RustTLS as default TLS backend
__tls = []

# Enables common rustls code.
# Equivalent to rustls-tls-manual-roots but shorter :)
__rustls = [
    "hyper-rustls",
    "tokio-rustls",
    "rustls",
    "__tls",
    "dep:rustls-pemfile",
    # "rustls-pki-types",
]

proxy = ["socks"]
socks = ["tokio-socks"]

