[package]
name = "lib_rpc_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Dev deps
anyhow = { workspace = true }
async-trait = "0.1"
bytes = { workspace = true }
log = "0.4"
pin-project-lite = "0.2"
thiserror = { workspace = true }
tracing = { workspace = true }


# Basic deps
base64 = { workspace = true }
dashmap = "5.5"
http-02 = { workspace = true }       # compatibility
http-body-04 = { workspace = true }  # compatibility
hyper-014 = { workspace = true }     # compatibility
percent-encoding = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-service = { workspace = true }
url = { workspace = true }

# Business deps
reqwest = { workspace = true, features = [
    "blocking",
    "socks",
    "brotli",
    "gzip",
    "deflate",
    "rustls-tls",
    "json",
    "cookies",
] }
tonic = { workspace = true, features = ["gzip"] }

# Local libs
lib_bilibili = { workspace = true }
lib_utils = { workspace = true }

# Optional deps...

rustls-pemfile = { version = "1.0", optional = true }

## rustls-tls, all use old version for compatibility with hyper 0.14
hyper-rustls = { version = "0.24.0", default-features = false, features = ["http2"], optional = true }
rustls = { version = "0.21.6", features = ["dangerous_configuration"], optional = true }
tokio-rustls = { version = "0.24", optional = true }
webpki-roots = { version = "0.25", optional = true }
rustls-native-certs = { version = "0.6", optional = true }

## socks
tokio-socks = { version = "0.5.1", optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tonic = { workspace = true }

[features]
default = ["rustls-tls", "proxy"]

proxy = ["socks"]
socks = ["tokio-socks"]

# TLS Feature
# TODO: may add native TLS backend
rustls-tls = ["rustls-tls-webpki-roots"]
rustls-tls-webpki-roots = ["webpki-roots", "__rustls"]
# rustls-tls-native-roots = ["rustls-native-certs", "__rustls"]

# ============= Inner feature =============

__tls = [] # TLS backend should be always enabled

# Enables common rustls code.
__rustls = [
    "hyper-rustls",
    "tokio-rustls",
    "rustls",
    "__tls",
    "dep:rustls-pemfile",
    # "rustls-pki-types",
]
