[package]
name = "lib_rpc_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Dev deps
anyhow = { workspace = true }
bytes = { workspace = true }
log = { version = "0.4", optional = true }
pin-project-lite = { version = "0.2", optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Basic deps
base64 = { workspace = true, optional = true }
dashmap = { version = "5.5", optional = true }
http-02 = { workspace = true }                        # compatibility
http-body-04 = { workspace = true, optional = true }  # compatibility
hyper-014 = { workspace = true }                      # compatibility
percent-encoding = { version = "2", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-service = { workspace = true, optional = true }
url = { workspace = true }

# Business deps
reqwest = { workspace = true }
tonic = { workspace = true }

# Local libs
lib_bilibili = { workspace = true, optional = true }
lib_utils = { workspace = true }

# Optional deps...

rustls-pemfile = { version = "1.0", optional = true }

## rustls-tls, all use old version for compatibility with hyper 0.14
hyper-rustls = { version = "0.24.0", default-features = false, features = ["http2"], optional = true }
rustls = { version = "0.21.6", features = ["dangerous_configuration"], optional = true }
tokio-rustls = { version = "0.24", optional = true }
webpki-roots = { version = "0.25", optional = true }
rustls-native-certs = { version = "0.6", optional = true }

## socks
tokio-socks = { version = "0.5.1", optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[features]
default = ["simple_lib"]

# Simple feature for basic usage
simple_lib = ["reqwest/json"]
# Full feature for main usage
full = ["__reqwest_ext", "__tonic_ext", "__deps_ext"]

# ============= Inner feature =============

__tls = [] # TLS backend should be always enabled

# TLS Feature
# TODO: may add native TLS backend
rustls-tls = ["rustls-tls-webpki-roots"]
rustls-tls-webpki-roots = ["webpki-roots", "__rustls"]
# rustls-tls-native-roots = ["rustls-native-certs", "__rustls"]

## Enables common rustls code.
__rustls = [
    "hyper-rustls",
    "tokio-rustls",
    "rustls",
    "__tls",
    "dep:rustls-pemfile",
    # "rustls-pki-types",
]

# Extend features for reqwest
__reqwest_ext = [
    "reqwest/blocking",
    "reqwest/socks",
    "reqwest/brotli",
    "reqwest/gzip",
    "reqwest/deflate",
    "reqwest/rustls-tls",
    "reqwest/cookies",
]

# Extend features for tonic
__tonic_ext = ["tonic/gzip", "rustls-tls", "proxy"]

# Optional deps
__deps_ext = [
    "dep:log",
    "dep:pin-project-lite",
    "dep:base64",
    "dep:dashmap",
    "dep:http-body-04",
    "dep:percent-encoding",
    "dep:tokio",
    "dep:tower",
    "dep:tower-service",
    "dep:lib_bilibili",
]

# Proxy Feature
proxy = ["socks"]
socks = ["tokio-socks"]
