[package]
name = "lib_rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Dev deps
anyhow = { workspace = true }

# Business deps
tonic = { workspace = true, features = ["gzip"] }

# Local deps
lib_rpc_client = { workspace = true }
lib_utils = { workspace = true }
