[package]
name = "lib_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", default-features = false }
# const-hex = "1"
fluent-uri = "0.1.4"
hmac = "0.12"
http = "1.0"
md-5 = "0.10.6"
num_enum = "0.7"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1"
urlencoding = "2.1"

[dev-dependencies]
axum = { version = "0.7", default-features = false, features = ["json"] }
