[package]
name = "lib_utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Dev deps
anyhow = { workspace = true }
num_enum = "0.7"
thiserror = { workspace = true }
tracing = { workspace = true }

# Basic deps
bytes = { workspace = true }
base64 = { workspace = true }
# const-hex = "1"
fluent-uri = "0.1.4"
hmac = "0.12"
http = { workspace = true }
http-02 = { workspace = true } # Compatibility
md-5 = "0.10"
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
urlencoding = "2.1"

# Business deps
axum = { workspace = true, features = ["json"] }
tonic = { workspace = true }

# open-telemetry
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Local libs
lib_bilibili = { workspace = true }
